hphp/test/zend/good/Zend/tests/clone_004.php.expectf

Fatal error: Object does not implement ArrayAccess in %s/clone_004.php on line 13
